discussion/kv_engine/163199/163199_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: time_purge_hook() to use refs for require args

Change-Id: Ib93e3df18c5c68a5e4554f8697703d1d0a99bc86

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-10-07 14:29:02.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-10-07 14:54:54.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40913/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40913/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15161/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15161/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15758/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15758/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23181/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2908/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2908/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14890/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14890/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2947/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2947/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13288/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:972:49: error: indirection requires pointer operand ("CompactionContext" invalid) [clang-diagnostic-error]
                        *info, *metadata, item, *ctx, timeToExpireFrom);
                                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13288/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:972:49:
error: indirection requires pointer operand ("CompactionContext" invalid) [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13288/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14039/ : FAILURE

Compile error at [2021-10-07T14:42:05.198Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master@2/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:972:49:
error: indirection requires pointer operand ("CompactionContext" invalid)
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14039/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12076/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
